--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ frontend/node_modules/
 backend/node_modules/
 frontend/build/
 .env
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
