--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
+    "allure-playwright": "^3.0.7",
     "body-parser": "^1.20.2",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "faker": "^6.6.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.10.1"
   }
-
 }
