--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -12,18 +12,17 @@ jobs:
   lint:
     name: Run ESLint
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run ESLint
-        run: npx eslint . --ext .js,.ts
+        run: npx eslint .
