--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.10.1",
+    "eslint": "^9.16.0",
     "nodemon": "^3.1.7"
   }
 }
