--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@faker-js/faker": "^9.3.0",
     "allure-playwright": "^3.0.7",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.1",
-    "faker": "^6.6.6"
+    "express-validator": "^7.2.1",
+    "faker": "^6.6.6",
+    "mongoose": "^8.16.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
